2005-06-28  Derek Price  <derek@ximbiot.com>

	* doc/autoconf.texi (Limitations of Usual Tools <sed>): Reword recent
	addition.

2005-06-23  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Don't worry about spaces in bindir etc.  Only srcdir and working
	directory have inherent problems with special characters like spaces,
	due to limitations in Make syntax.  Problem reported by Alexandre
	Duret-Lutz.
	* lib/autoconf/general.m4 (_AC_INIT_DIRCHECK): Implement the above.
	Also, fix Tru64 porting problem with shell patterns,
	reported by Ralf Wildenhues.

2005-06-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Subdirectories): Fix markup typos.

2005-06-23  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/local.at (AT_CHECK_ENV): Simplify regexp slightly.

	Fix some more shell quoting problems.  Prompted by a bug report
	from Justace Clutter.
	* lib/autoconf/general.m4 (_AC_INIT_DIRCHECK): Put name of invalid
	variable into diagnostic.  Make the diagnostic an error, not a warning,
	because we really don't support spaces and suchlike in dir names.
	(_AC_INIT_SRCDIR): Allow special characters in $ac_unique_file.
	Don't worry about backslashes in srcdir; it can't happen now.
	(_AC_INIT_PARSE_ARGS): Allow weird characters in ac_optarg.
	Simplify ac_optarg handling.
	(_AC_ARG_VAR_VALIDATE): Remove unnecessary and inconsistent quotes.

2005-06-22  Stepan Kasal  <kasal@ucw.cz>

	Fix AT_CONFIG_CMP for Solaris hosts; idea from Ralf Menzel.
	* configure.ac: Call AC_PROG_EGREP and AC_PROG_SED.
	* tests/atlocal.in: Propagate $EGREP and $SED.
	* tests/local.at (AT_CHECK_ENV): Use $EGREP, not $GREP -E.
	(AT_CONFIG_CMP): Use sed instead of grep plumbing.

	* doc/autoconf.texi (Limitations of Usual Tools) <grep>: Mention
	that '\|' is not allowed in BREs; recommend using newline separated
	list of patterns instead of multiple -e options.

	* lib/autoconf/fortran.m4 (_AC_PROG_FC_V_OUTPUT): Remove an old comment.

2005-06-22  Stepan Kasal  <kasal@ucw.cz>
