@@ -1,3 +1,7 @@
+2005-06-29  Stepan Kasal  <kasal@ucw.cz>
+
+	* lib/autoconf/general.m4 (AC_ARG_VAR): Move next to _AC_ARG_PRECIOUS.
+
 2005-06-28  Derek Price  <derek@ximbiot.com>
 
 	* doc/autoconf.texi (Limitations of Usual Tools <sed>): Reword recent
